exports[`selection should properly default to no parent when not passed one 1`] = `
Object {
  "div": Object {
    "::-moz-selection": Object {
      "background-color": "blue",
    },
    "::selection": Object {
      "background-color": "blue",
    },
  },
}
`;

exports[`selection should properly pass parent and styles object 1`] = `
Object {
  "div": Object {
    "section::-moz-selection": Object {
      "background-color": "blue",
    },
    "section::selection": Object {
      "background-color": "blue",
    },
  },
}
`;

exports[`selection should throw 2 errors when not passed any parameters 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a minimum of %c1 parameter%c. However, you passed %c0 parameters%c.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: red",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a 2nd parameter of type object. However, you did not pass one.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw a warning when passed more than 2 parameters 1`] = `
Array [
  Array [
    "%c ✨ WARNING ✨ ---- mixins/selection.js --%c

selection %cexpects a maximum of %c2 parameters%c. However, you passed %c3 parameters%c. These additional parameters were ignored.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: green",
    "color: black; font-size: 12px",
    "color: black; font-size: 12px; font-weight: bold; color: goldenrod",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw an error when passed a non-object as its second parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a 2nd parameter of type object. However, you passed style(string) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;

exports[`selection should throw an error when passed a non-string as its first parameter 1`] = `
Array [
  Array [
    "%c ✨ ERROR ✨ ---- mixins/selection.js --%c

selection %cexpects a 1st parameter of type string. However, you passed 1(number) instead.
  %c
Please see the documentation at %chttps://polished.js.org/docs/#selection%c for more information.",
    "font-weight: bold; color: black",
    "color: black; font-size: 12px; font-weight: bold",
    "color: black; font-size: 12px",
    "color: gray; line-height: 1.4",
    "color: blue; line-height: 1.4",
    "color: gray; line-height: 1.4",
  ],
]
`;
